--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Sergio. It uses data from mapbox and darksky</p>
         <img class="portrait" src="/img/robot.png">
     </div>
     {{>footer}}
